<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.slideshow.SlideshowFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="80dp"
        android:background="@color/Module_Back_color"
        >


        <Button
            android:id="@+id/mod_1"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:text="@string/kotlin_lab_1"
           />
        <Button
            android:id="@+id/mod_2"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:text="@string/kotlin_lab_2" />
        <Button
            android:id="@+id/mod_3"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:text="@string/kotlin_lab_3" />
        <Button
            android:id="@+id/mod_4"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:text="@string/kotlin_lab_4" />
        <Button
            android:id="@+id/mod_5"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:text="@string/kotlin_lab_5" />

        <Button
            android:id="@+id/mod_6"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:text="@string/kotlin_lab_6" />

        <Button
            android:id="@+id/mod_7"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:text="@string/kotlin_lab_7" />
        <Button
            android:id="@+id/mod_8"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:text="@string/kotlin_lab_8" />
        <Button
            android:id="@+id/mod_9"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:text="@string/kotlin_lab_9" />
        <Button
            android:id="@+id/mod_10"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:text="@string/kotlin_lab_10" />
        <Button
            android:id="@+id/mod_11"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:text="@string/kotlin_lab_11" />
        <Button
            android:id="@+id/mod_12"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:text="@string/kotlin_lab_12" />
        <Button
            android:id="@+id/mod_13"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:text="@string/kotlin_lab_13" />

    </LinearLayout>

</ScrollView>